[package]
name = "unrailed_seed_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.89"
web-sys = { version = "0.3.66", features = ["Window", "Document", "HtmlElement", "console", "HtmlInputElement"] }
base64 = "0.21.5"
error-stack = "0.4.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
